[package]
authors = ["Dennis Kottier <inquiries@photonbur.st>"]
description = "A Nushell plugin implementing vector operations"
edition = "2021"
homepage = "https://github.com/PhotonBursted/nu_plugin_vec"
license = "MIT"
name = "nu_plugin_vec"
readme = "README.md"
version = "1.1.6"

[dependencies]
nu-plugin = "0.105.1"
nu-protocol = "0.105.1"
itertools = "0.14.0"

[dev-dependencies]
nu-plugin-test-support = { version = "0.105.1" }